<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/bookmarks"
            android:icon="@drawable/bookmark"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_expect"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_gallery" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_recommend"
                android:icon="@drawable/ic_record_voice_over_black_24dp"
                android:title="@string/menu_send" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/logout" />
</menu>
