<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:textStyle="italic"
        android:textColor="#4C1DA3"
        android:text="@string/contactheadline"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:textStyle="italic"
        android:background="#FFFFFF"
        android:textAllCaps="false"
        android:textColor="#4C1DA3"
        android:text="@string/contactbutton"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <Button
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:textStyle="italic"
        android:background="@drawable/btn_activity"
        android:id="@+id/headofficeaddr"
        android:textColor="#FFFFFF"
        android:text="@string/contactbutton1"
        android:layout_marginLeft="10dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:textStyle="italic|bold"
        android:textColor="#4C1DA3"
        android:text="@string/contactdial"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="italic"
        android:id="@+id/cont1"
        android:background="#FFFFFF"
        android:textAllCaps="false"
        android:textColor="#4C1DA3"
        android:drawableLeft="@drawable/ic_phone_in_talk_black_24dp"
        android:drawablePadding="8dp"
        android:text="@string/contactdialno1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:padding="3dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:id="@+id/cont2"
        android:drawablePadding="8dp"
        android:textStyle="italic"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_phone_in_talk_black_24dp"
        android:textColor="#4C1DA3"
        android:text="@string/contactdialno2"
        android:layout_marginLeft="10dp"
        android:padding="3dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:textStyle="italic|bold"
        android:textColor="#4C1DA3"
        android:text="@string/contactemail"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="italic"
        android:background="#FFFFFF"
        android:textAllCaps="false"
        android:textColor="#4C1DA3"
        android:id="@+id/emailaddr"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="8dp"
        android:text="@string/contactemailaddrs"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:textStyle="italic|bold"
        android:textColor="#4C1DA3"
        android:text="@string/contactaddress"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textStyle="italic"
        android:textColor="#4C1DA3"
        android:text="@string/contactaddress1"
        android:layout_marginLeft="10dp"
        android:padding="3dp"
        android:layout_gravity="center"
        android:gravity="center"/>


</LinearLayout>