<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Expert">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textStyle="italic|bold"
            android:textColor="#4C1DA3"
            android:text="@string/expertheadline"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textStyle="italic"
            android:background="#4C1DA3"
            android:textColor="#FFFFFF"
            android:text="@string/expert"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ashissh"
            android:textSize="19dp"
            android:textStyle="italic|bold"
            android:background="@drawable/course_btn_bg"
            android:textAllCaps="false"
            android:textColor="#4C1DA3"
            android:elevation="20dp"
            android:text="@string/ashish"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:textStyle="italic"
            android:textColor="#4C1DA3"
            android:text="@string/ashishdetail"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:padding="1dp"
            android:layout_gravity="center"
            android:gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/sau"
            android:textSize="19dp"
            android:textStyle="italic|bold"
            android:background="@drawable/course_btn_bg"
            android:textAllCaps="false"
            android:textColor="#4C1DA3"
            android:elevation="20dp"
            android:text="@string/sau"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:textStyle="italic"
            android:textColor="#4C1DA3"
            android:text="@string/saudetail"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:padding="1dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:elevation="20dp"
            android:background="@drawable/course_btn_bg"
            android:drawableTop="@drawable/gautam"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/gau"
            android:textAllCaps="false"
            android:textColor="#4C1DA3"
            android:textSize="19dp"
            android:textStyle="italic|bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:textStyle="italic"
            android:textColor="#4C1DA3"
            android:text="@string/gaudetail"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:padding="1dp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>
</ScrollView>